--- a/NaBatalhaDoCangaco/Asteroides.csproj
+++ b/NaBatalhaDoCangaco/Asteroides.csproj
@@ -27,4 +27,7 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\source\repos\neural\RedeNeural\Neural.csproj" />
+  </ItemGroup>
 </Project>
